deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-tracker
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: speedtest-tracker
    app.kubernetes.io/part-of: speedtest-tracker
spec:
  type: LoadBalancer #ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: speedtest-tracker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: speedtest-tracker
    app.kubernetes.io/part-of: speedtest-tracker
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: speedtest-tracker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: speedtest-tracker
    spec:
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: speedtest-tracker
          image: lscr.io/linuxserver/speedtest-tracker:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: config
              mountPath: /config
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 125m
              memory: 128Mi
            limits:
              cpu: 256m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 65534
        runAsUser: 65534
        runAsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: config 
          emptyDir:
            {}
        - name: tmp
          emptyDir:
            {}
