postgres-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: speedtest-tracker-postgres
    app.kubernetes.io/part-of: speedtest-tracker
    app.kubernetes.io/component: database
  name: speedtest-tracker-postgres
  namespace: speedtest-tracker
spec:
  selector:
    app.kubernetes.io/name: speedtest-tracker-postgres
  ports:
  - name: http-postgres
    port: 5432
    protocol: TCP
    targetPort: http
    appProtocol: http
  type: ClusterIP 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: speedtest-tracker-postgres
    app.kubernetes.io/part-of: speedtest-tracker
    app.kubernetes.io/component: database
  name: speedtest-tracker-postgres  
  namespace: speedtest-tracker
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: speedtest-tracker-postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/name: speedtest-tracker-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16.2
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: http
              containerPort: 5432  
          securityContext:
            capabilities:
              drop:
              - ALL
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: speedtest-tracker-postgredb
              mountPath: /var/lib/postgresql
              subPath: data
            - name: tmp
              mountPath: /tmp
            - name: run
              mountPath: /var/run/postgresql/  
      volumes:
        - name: speedtest-tracker-postgredb
          persistentVolumeClaim:
            claimName: speedtest-tracker-postgres-claim
        - name: tmp
          emptyDir: {} 
        - name: run
          emptyDir: {}       
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        fsGroup: 999
